# Norgance

./: ARCHITECTURE.md  README.md
.github/workflows/: password_quality_server.yml
archives/chatrouille/: Cargo.toml
archives/chatrouille/src/: compressor.rs  graphql.rs  main.rs  proxy.rs  server.rs
archives/hasura/: docker-compose.yaml
archives/jwe-proxy/: decrypt.go  server.go
archives/noisy-datalink/: Cargo.toml
archives/noisy-datalink/src/: main.rs
archives/rust-noise-test/: Cargo.toml
archives/rust-noise-test/src/: main.rs
backend/chatrouille/: Cargo.toml
backend/chatrouille/src/: chatrouille.rs  main.rs
backend/hasura/: docker-compose.yaml
backend/jwe-proxy/: README.md  go.mod  go.sum  proxy.go
backend/norgance/: Cargo.toml
backend/norgance/migrations/2020-09-18-082911_create_schema/: up.sql
backend/norgance/src/: db.rs  graphql.rs  main.rs  models.rs  mutation.rs  server.rs  validation.rs
backend/norgance/src/chatrouille/: compressor.rs  key_utils.rs  mod.rs
backend/norgance/src/db/: mod.rs  models.rs
backend/norgance/src/server/: graphql.rs  handlers.rs  mod.rs
backend/rust-noise-test/: Cargo.toml
backend/rust-noise-test/src/: main.rs
frontend/norgance/: .eslintrc.js  package-lock.json  package.json  vue.config.js
frontend/norgance/public/: index.html
frontend/norgance/rust/: Cargo.toml
frontend/norgance/rust/src/: lib.rs
frontend/norgance/src/: App.vue  i18n.js  main.js  rust.js  rustWorkerGlue.js
frontend/norgance/src/components/: HelloWorld.vue  RustCheck.vue
frontend/norgance/src/router/: index.js
frontend/norgance/src/store/: citizenApplication.js
frontend/norgance/src/styles/: 98.scss  app.scss  formulate.scss
frontend/norgance/src/views/: RegisterCitizenship.vue
frontend/norgance/src/views/citizenApplication/: Birthday.vue  Identifier.vue  Names.vue  Password.vue  Start.vue  Summary.vue
hsm/: sketch_hsm_ed25519.ino
hsm/hsm_arduino/: sketch_hsm_ed25519.ino
hsm/hsm_rust/: Cargo.toml
hsm/hsm_rust/src/: main.rs
norgance.com/: Makefile  config.toml
norgance.com/content/: _index.en.md  _index.fr.md  about.en.md  contact.en.md  contact.fr.md  contribute.en.md  contribute.fr.md  law.en.md  law.fr.md  pgp.en.md  privacy.en.md  privacy.fr.md
norgance.com/content/blog/: _index.en.md  _index.fr.md  hello.en.md  hello.fr.md  rust.en.md
norgance.com/content/posts/: my-first-post.en.md
norgance.com/themes/norgance/: theme.toml
norgance.com/themes/norgance/assets/css/: milligram.css
norgance.com/themes/norgance/assets/scss/: blog.scss  content.scss  footer.scss  main.scss
norgance.com/themes/norgance/layouts/_default/: baseof.html
norgance.com/themes/norgance/layouts/blog/: list.html  single.html
norgance.com/themes/norgance/layouts/partials/: date.html  footer.html  head.html
norgance.net/backend/: .gitignore  Cargo.toml
norgance.net/backend/migrations/2020-09-18-082911_create_schema/: down.sql  up.sql
norgance.net/backend/src/: main.rs  validation.rs  vault.rs
norgance.net/backend/src/chatrouille/: compressor.rs
norgance.net/backend/src/commandline/: mod.rs
norgance.net/backend/src/db/: mod.rs  models.rs  schema.rs
norgance.net/backend/src/server/: check_password_quality.rs  graphql.rs  handlers.rs  mod.rs
norgance.net/chatrouille/: Cargo.toml
norgance.net/chatrouille/src/: key_utils.rs  lib.rs
norgance.net/frontend/: .eslintrc.js  .gitignore  README.md  auie.js  package-lock.json  package.json  vue.config.js
norgance.net/frontend/rust/: Cargo.toml
norgance.net/frontend/rust/src/: lib.rs
norgance.net/frontend/src/: App.vue  chatrouille.js  entropy.js  i18n.js  main.js  rust.js  rustWorker.js
norgance.net/frontend/src/components/: Header.vue  HelloWorld.vue  LanguageSelector.vue  RustCheck.vue  Spinner.vue
norgance.net/frontend/src/libs/: confetti.js
norgance.net/frontend/src/router/: index.js
norgance.net/frontend/src/rustyglue/: classes.js  index.js  rustClass.js  rustPromiseWorker.js  rustWorker.js  rustyChatrouille.js
norgance.net/frontend/src/store/: citizenApplication.js  index.js  registerCitizenship.js
norgance.net/frontend/src/styles/: app.scss  formulate.scss
norgance.net/frontend/src/views/: Home.vue  RegisterCitizenship.vue
norgance.net/frontend/src/views/citizenApplication/: Birthday.vue  Congratulations.vue  Final.vue  Identifier.vue  Names.vue  Password.vue  Start.vue  Summary.vue
norgance.net/passwords/: README.md
norgance.net/passwords/password_quality_server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
norgance.net/passwords/password_quality_server/src/: main.rs
norgance.net/passwords/tools/convertor/: Cargo.toml
norgance.net/passwords/tools/index_builder/: Cargo.toml
norgance.net/passwords/tools/index_builder/src/: main.rs
passwords/password_quality_server/: Cargo.toml
passwords/password_quality_server/src/: main.rs
passwords/tools/convertor/src/: main.rs
passwords/tools/index_builder/: Cargo.toml
passwords/tools/index_builder/src/: main.rs
pgp/: sign-all.py  sign.py
static/norgance/: config.toml
static/norgance/content/: _index.en.md  _index.es.md  _index.fr.md  about.en.md  about.fr.md  contribute.en.md  cookies.en.md  cookies.fr.md  ducks.md  how-does-it-work.en.md  law.en.md  pgp.en.md  privacy.en.md  privacy.fr.md
static/norgance/content/posts/: my-first-post.fr.md
static/norgance/prout/: b
static/norgance/themes/norgance/assets/css/: canard.css
static/norgance/themes/norgance/assets/js/: script.js
static/norgance/themes/norgance/assets/scss/: content.scss  cookies.scss  footer.scss  header.scss  main.scss
static/norgance/themes/norgance/layouts/: index.html
static/norgance/themes/norgance/layouts/_default/: baseof.html  single.html
static/norgance/themes/norgance/layouts/partials/: cookies.html  footer.html  head.html  header.html  scripts.html
