[package]
name = "rust-noise-test"
version = "0.1.0"
authors = ["Norgance <66333061+norgance-admin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snow = { version = "0.7.0", features = ["xchachapoly"], default-features = false}


