[package]
name = "norgance"
version = "0.1.0"
authors = ["Norgance <66333061+norgance-admin@users.noreply.github.com>"]
edition = "2018"

[dependencies]
juniper_hyper = { git = "https://github.com/graphql-rust/juniper" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
hyper = "0.13.8"
pretty_env_logger = "0.4.0"
tokio = {version = "0.2.22", features = ["full"] }
diesel = { version = "1.4.5", features = ["postgres","r2d2"] }
diesel_migrations = "1.4.0"
snafu = "0.6.9"
r2d2 = "0.8.9"
lenient_bool = "0.1.1"
regex = "1"
lazy_static = "1.4.0"
#thiserror = "1.0.20"
#anyhow = "1.0.31"
