[package]
name = "hsm_rust"
version = "0.1.0"
authors = ["Norgance <66333061+norgance-admin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
base64 = "0.13.0"
ed25519-dalek = "1.0.1"
rand = "0.8.0"

[dependencies.serialport]
version = "4.0.0"
default-features = false