[package]
name = "password_quality_server"
version = "0.1.0"
authors = ["Norgance <66333061+norgance-admin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0.1"
actix-rt = "1.0"
actix-web = "2.0"
env_logger = "0.7.1"
failure = "0.1.8"
serde = "1.0.111"